[package]
name = "rusted-switch"
version = "0.0.6"
authors = ["igor@borges.me"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rlibc = "*"
panic-abort = "0.3.2"

[build-dependencies]
bindgen = "0.65.1"
